5b under "public void visit(WhileLoop whileLoop) {                   whileLoop.expression.accept(this);", er lavet, og den ligger i filen ProgramTypeVisitorVisitor